<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	>
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save_step"
        android:layout_weight="0"
        android:visibility="gone"
        >
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_step"
            android:onClick="onClick"
            android:text="@string/cancel"
            android:layout_alignParentRight="true"
            />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/handle_name"
            android:layout_centerInParent="true"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_step"
            android:onClick="onClick"
			android:text="@string/btn_step_save"
            android:layout_alignParentLeft="true"
            />
        
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save_all"
        android:layout_weight="0" 
        >
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save"
            android:onClick="onClick"
            android:text="@string/save"
            android:layout_alignParentRight="true"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:onClick="onClick"
            android:text="@string/cancel"
            />
        
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        >
        <View 
            android:id="@+id/imageview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        
        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit"
            android:text="@string/image_edit"
            android:onClick="onClick"
            />
        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/tone"
            android:text="@string/image_tonecolor"
            android:onClick="onClick"
            />
        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/frame"
            android:text="@string/imgae_frame"
            android:onClick="onClick"
            />
        
    </LinearLayout>
    
</LinearLayout>